Add extra buttons and rainbow effect

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div id="container">
         
         <h1>Magic Etch a Sketch Screen</h1>
+        <div id="buttons">
         <button id="grid-size-button">Grid Size</button>
+        <button id="reset-button">Reset</button>
+        <button id="rainbow-button">Rainbow Effect </button></div>
         <div id="grid-container"></div>
     
     </div>
